--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "element-ui": "^1.4.4",
+    "mongoose": "^4.12.4",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
