--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,15 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "mongoose": "^4.12.4",
     "morgan": "~1.8.1",
     "node-uuid": "^1.4.8",
-    "serve-favicon": "~2.4.2"
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "serve-favicon": "~2.4.2",
+    "vuex": "^3.0.0"
   }
 }
