--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2",
     "vuex": "^3.0.0"
   }
