--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "formidable": "^1.1.1",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
