--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2",
+    "uuid": "^3.1.0",
     "validator": "^9.1.1",
     "vuex": "^3.0.0"
   }
