--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap-social": "^5.1.1",
+    "bootstrap-vue": "^1.4.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
+    "nprogress": "^0.2.0",
+    "vuex-persistedstate": "^2.4.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
