--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "bootstrap": "^4.0.0-beta.3",
     "bootstrap-social": "^5.1.1",
     "bootstrap-vue": "^1.4.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "nprogress": "^0.2.0",
-    "vuex-persistedstate": "^2.4.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
