--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.7.2",
     "nprogress": "^0.2.0",
     "sass-loader": "^6.0.6",
+    "tracer": "^0.8.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuejs-noty": "^0.1.3",
